--- a/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
+++ b/dotNet5782_8995_8035/PL/ListsViewWindow.xaml
@@ -23,22 +23,24 @@
         <TabItem x:Name="DronesView" Header="Drone List" Width="100">
             <Grid x:Name="MainGrid">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="24*"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="234*"/>
+                    <ColumnDefinition Width="71*"/>
+                    <ColumnDefinition Width="44*"/>
+                    <ColumnDefinition Width="261*"/>
+                    <ColumnDefinition Width="305*"/>
+                    <ColumnDefinition Width="293*"/>
+                    <ColumnDefinition Width="12*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="400*"/>
                 </Grid.RowDefinitions>
 
-                <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="1" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print"/>
+                <ComboBox x:Name="StatusSelector" ItemsSource="{Binding}" Margin="27,24,28,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="StatusChoose" FontFamily="Segoe Print" Grid.ColumnSpan="2"/>
 
-                <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
+                <ComboBox x:Name="WeightSelecter" ItemsSource="{Binding}" Margin="26,24,27,5" Grid.Column="4" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>
 
-                <ListView x:Name="DroneList" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="5" MouseDoubleClick="ClickedDroneInList" MinHeight="5" >
+                <ListView x:Name="DroneList" ItemsSource="{Binding}" Grid.Row="1" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" Grid.ColumnSpan="7" MouseDoubleClick="ClickedDroneInList" MinHeight="5" >
                     <ListView.Background>
                         <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
                     </ListView.Background>
@@ -54,18 +56,18 @@
                         </GridView>
                     </ListView.View>
                 </ListView>
-                <Button Content="Add Drone" Margin="0,10,0,10" Click="AddDrone_Click" HorizontalAlignment="Center" Width="180"  />
-                <Label Content="Status selector" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                <Button Content="Add Drone" Margin="0,12,0,12" Click="AddDrone_Click" HorizontalAlignment="Center" Width="180" Grid.ColumnSpan="2"  />
+                <Label Content="Status selector" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="37,-7,0,0">
                     <Label.Effect>
                         <DropShadowEffect/>
                     </Label.Effect>
                 </Label>
-                <Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
+                <Label Content="weight selector" Grid.Column="4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="80,-7,0,0">
                     <Label.Effect>
                         <DropShadowEffect/>
                     </Label.Effect>
                 </Label>
-                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="5" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
 
             </Grid>
         </TabItem>
@@ -135,18 +137,19 @@
         <TabItem Name="BaseStationList" Header="Base Station List" Width="100">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="25*"/>
-                    <ColumnDefinition Width="24*"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="305*"/>
+                    <ColumnDefinition Width="70*"/>
+                    <ColumnDefinition Width="235*"/>
+                    <ColumnDefinition Width="305*"/>
+                    <ColumnDefinition Width="293*"/>
+                    <ColumnDefinition Width="12*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="400*"/>
                 </Grid.RowDefinitions>
 
-                
+
                 <!--<Label Content="weight selector" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="156" Height="39" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontFamily="Forte" FontSize="20" Background="Transparent" Foreground="#DDC3B63C" Margin="81,-7,0,0">
                     <Label.Effect>
                         <DropShadowEffect/>
@@ -154,7 +157,7 @@
                 </Label>
                 <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
 
-                <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
+                <ListView x:Name="ListOfBaseStationsView" ItemsSource="{Binding}" SelectedIndex="0" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedBaseStationInList" MinHeight="5" Grid.ColumnSpan="6" Grid.Row="1" >
                     <ListView.Background>
                         <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
                     </ListView.Background>
@@ -168,13 +171,13 @@
                     </ListView.View>
                 </ListView>
 
-                <Button Content="Add Base Station" Margin="0,10,0,10" Click="AddBaseStationButton_Click" HorizontalAlignment="Center" Width="180"  />
+                <Button Content="Add Base Station" Margin="0,12,0,12" Click="AddBaseStationButton_Click" HorizontalAlignment="Center" Width="180"  />
 
 
-                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
-                
-                <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected"/>
-                <Label Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="189,7,0,0" VerticalAlignment="Top"/>
+                <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="4" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
+
+                <ComboBox x:Name="NumberOfSlotsSelector" ItemsSource="{Binding}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="215" Height="32" SelectionChanged="BaseStationGuopingSelected" Grid.ColumnSpan="2" Margin="45,0,0,0"/>
+                <Label Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="119,7,0,0" VerticalAlignment="Top"/>
 
             </Grid>
 
@@ -209,10 +212,10 @@
                 </Label>
                 <ComboBox x:Name="Selecter" ItemsSource="{Binding}" Margin="27,24,27,5" Grid.Column="2" SelectedIndex="3" SelectionChanged ="WeightChoose" FontFamily="Segoe Print"/>-->
 
-                <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="10,10,10,10" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.RowSpan="2" >
-                    <ListView.Background>
+                <ListView x:Name="ListOfCustomersView" ItemsSource="{Binding}" Margin="8,10,12,93" RenderTransformOrigin="0.831,0.089" MouseDoubleClick="ClickedCustomerInList" MinHeight="5" Grid.ColumnSpan="5" Grid.Row="1" >
+                    <!--<ListView.Background>
                         <ImageBrush Opacity="10" ImageSource="/images/5.jpg"/>
-                    </ListView.Background>
+                    </ListView.Background>-->
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header = "Id" DisplayMemberBinding="{Binding Path = Id}" />
@@ -225,8 +228,7 @@
                     </ListView.View>
                 </ListView>
 
-                <Button Content="Add Customer" Margin="0,12,63,12" Click="AddCustomer_Click" HorizontalAlignment="Right" Width="180"  />
-
+                <Button Content="Add Customer" Margin="0,12,63,12" Click="AddCustomer_Click" HorizontalAlignment="Right" Width="180"/>
 
                 <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="39" Width="52" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Grid.Column="3" Margin="254,0,0,0" Grid.ColumnSpan="2"/>
 
