--- a/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
+++ b/dotNet5782_8995_8035/PL/BaseStationWindow.xaml
@@ -31,11 +31,11 @@
             </StackPanel>
             <StackPanel Margin="3" Orientation="Horizontal">
                 <Label Content="Name"  Width="108"  />
-                <TextBox x:Name="BaseStationName" Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
             </StackPanel>
             <StackPanel Margin="3" Orientation="Horizontal">
                 <Label Content="Charge Slots"  Width="108"  />
-                <TextBox x:Name="BaseStationChargeSlots" Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+                <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
             </StackPanel>
 
             <StackPanel Height="20">
@@ -43,6 +43,29 @@
             </StackPanel>
 
             <Button x:Name="AddingButton" Margin="3" Content="Add New BaseStation" Width="180" Click="OnClickAddBaseStationButton" />
+
+        </StackPanel>
+
+        <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="ID" Width="108" />
+                <TextBox Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Name"  Width="108"  />
+                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Charge Slots"  Width="108"  />
+                <TextBox Text="{Binding ChargeSlots, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Free Charging Slots"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+            </StackPanel>
+
+            <StackPanel Height="20">
+
+            </StackPanel>
+
+            <Button x:Name="UpdateButton" Margin="3" Content="Update BaseStation" Width="180" Click="OnClickUpdateBaseStationButton" />
 
         </StackPanel>
     </Grid>
