--- a/dotNet5782_8995_8035/PL/CustomerWindow.xaml
+++ b/dotNet5782_8995_8035/PL/CustomerWindow.xaml
@@ -37,6 +37,13 @@
                 <Label Content="Phone"  Width="108"  />
                 <TextBox x:Name="customerPhone" Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
             </StackPanel>
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                <Label  Content="Location" Width="108" />
+                <StackPanel>
+                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                </StackPanel>
+            </StackPanel>
 
             <StackPanel Height="20">
 
@@ -45,6 +52,35 @@
             <Button x:Name="AddingButton" Margin="3" Content="Add New Customer" Width="180" Click="OnClickAddCustomerButton" />
 
         </StackPanel>
-        
+
+        <StackPanel x:Name="OptionStack" Visibility="Collapsed"  Margin="5" HorizontalAlignment="Stretch">
+            <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="49" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="ID" Width="108" />
+                <TextBox x:Name="UpdatecustomerID" Text="{Binding Id, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" IsReadOnly="True" materialDesign:HintAssist.Hint="ID"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Name"  Width="108"  />
+                <TextBox Text="{Binding Name, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Name"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+            </StackPanel>
+            <StackPanel Margin="3" Orientation="Horizontal">
+                <Label Content="Phone"  Width="108"  />
+                <TextBox Text="{Binding Phone, Mode=TwoWay,  NotifyOnValidationError=True, ValidatesOnExceptions=True}" materialDesign:HintAssist.Hint="Phone"  Width="180" Style="{StaticResource MaterialDesignFloatingHintTextBox}" PreviewTextInput="NumberValidationTextBox"/>
+            </StackPanel>
+            <StackPanel Height="50" Margin="3" Orientation="Horizontal">
+                <Label  Content="Location" Width="108" />
+                <StackPanel>
+                    <TextBox  Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox" />
+                    <TextBox  Text="{Binding Location.Latitude, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}" Width="180" PreviewTextInput="FloatNumberValidationTextBox"/>
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Height="20">
+
+            </StackPanel>
+
+            <Button x:Name="UpdateButton" Margin="3" Content="Update Customer" Width="180" Click="OnClickUpdateCustomerButton" />
+
+        </StackPanel>
     </Grid>
 </Window>
